--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -1,10 +1,15 @@
-.spinner {
-  margin: 100px auto 0;
-  width: 70px;
-  text-align: center;
+.spinner-wrapper {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  z-index: 1300;
 }
 
-.spinner>div {
+.spinner > div {
   width: 18px;
   height: 18px;
   background-color: #fff;
@@ -28,10 +33,11 @@
   0%,
   80%,
   100% {
-    -webkit-transform: scale(0)
+    -webkit-transform: scale(0);
   }
+
   40% {
-    -webkit-transform: scale(1.0)
+    -webkit-transform: scale(1);
   }
 }
 
@@ -42,8 +48,9 @@
     -webkit-transform: scale(0);
     transform: scale(0);
   }
+
   40% {
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
